src/app/style.scss
@use "sass:map";

// --- Bootstrap imports ---

// Configuration
@import "~bootstrap/scss/functions";
@import "~bootstrap/scss/variables";
@import "~bootstrap/scss/variables-dark";
@import "~bootstrap/scss/maps";
@import "~bootstrap/scss/mixins";
@import "~bootstrap/scss/utilities";

// Layout & components
@import "~bootstrap/scss/root";
@import "~bootstrap/scss/reboot";
@import "~bootstrap/scss/containers";
@import "~bootstrap/scss/tables";
@import "~bootstrap/scss/forms";
@import "~bootstrap/scss/buttons";
@import "~bootstrap/scss/dropdown";
@import "~bootstrap/scss/nav";
@import "~bootstrap/scss/navbar";
@import "~bootstrap/scss/pagination";
@import "~bootstrap/scss/alert";
@import "~bootstrap/scss/close";
@import "~bootstrap/scss/offcanvas";

// Helpers
@import "~bootstrap/scss/helpers";

// Utilities
@import "~bootstrap/scss/utilities/api";

// --- End Bootstrap imports ---

@import "@absreim/react-bootstrap-data-grid/style";

// --- Styles specific to this project ---

.rbdg-docs-toc {
  min-width: 12rem;
  font-size: 0.9rem;

  ul {
    padding-left: map.get($spacers, 3);
  }
}

.rbdg-docs-toc-li {
  text-overflow: ellipsis;
  overflow-x: hidden;
}

.rbdg-docs-main {
  min-height: 0;
  min-width: 0;
}

.rbdg-mdx-body {
  img {
    width: auto;
    max-width: 100%;
    height: auto;
  }
}

@include media-breakpoint-up(lg) {
  .overflow-lg-y-auto {
    overflow-y: auto;
  }
}

// --- Logo ---

:root, [data-bs-theme="light"] {
  .logo-grid {
    color: #087ea4; // React logo color
  }

  .logo-letter {
    color: var(--bs-primary);
  }
}

[data-bs-theme="dark"] {
  .logo-grid {
    color: var(--bs-body-color);
  }

  .logo-letter {
    color: var(--bs-body-color);
  }
}

.navbar-logo {
  /* Set a fixed height that fits the navbar */
  height: 2rem;
  width: auto;
}

.hero-logo {
  height: 15rem;
  width: auto;
}

// --- Shiki themes ---

code[data-theme*=" "],
code[data-theme*=" "] span {
  color: var(--shiki-light);
  background-color: var(--shiki-light-bg);
}

@mixin shiki-dark-theme {
  code[data-theme*=" "],
  code[data-theme*=" "] span {
    color: var(--shiki-dark);
    background-color: var(--shiki-dark-bg);
  }
}

:root[data-bs-theme="dark"] {
  @include shiki-dark-theme;
}

